--- a/packages/plugins/rrweb-plugin-console-record/package.json
+++ b/packages/plugins/rrweb-plugin-console-record/package.json
@@ -45,12 +45,12 @@
   },
   "homepage": "https://github.com/rrweb-io/rrweb#readme",
   "devDependencies": {
+    "puppeteer": "^20.9.0",
     "rrweb": "^2.0.0-alpha.18",
     "typescript": "^5.4.5",
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1",
-    "vitest": "^1.4.0",
-    "puppeteer": "^20.9.0"
+    "vitest": "^1.6.1"
   },
   "peerDependencies": {
     "rrweb": "^2.0.0-alpha.18"
